create github pages

--- a/page10.html
+++ b/page10.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="cid-rXb92UTJIN mbr-fullscreen mbr-parallax-background" id="header2-1u">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="cid-rXb92UTJIN mbr-fullscreen mbr-parallax-background" id="header2-1u">
 
     
 
