create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="countdown2 cid-rY7yHCDM7a" id="countdown2-2f">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="countdown2 cid-rY7yHCDM7a" id="countdown2-2f">
 
     
 
@@ -76,7 +76,7 @@
     <div class="container pt-5 mt-2">
         <div class=" countdown-cont align-center p-4">
             <div class="event-name align-left mbr-white ">
-                <h4 class="mbr-fonts-style display-5">EVENT NAME</h4>
+                <h4 class="mbr-fonts-style display-5">END OF TRIAL VERSION AT 6.30PM</h4>
             </div>
             <div class="countdown align-center py-2" data-due-date="2020/05/06 ">
             </div>
