--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="countdown2 cid-rY7yHCDM7a" id="countdown2-2f">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="countdown2 cid-rY7yHCDM7a" id="countdown2-2f">
 
     
 
@@ -105,7 +105,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-5"><br>WELCOME TO BAVUNI SECONDARY SCHOOL &nbsp;E-LEARNING</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-7">This is the property of BAVUNI SECONDARY School Online program to the students handled by Mr. ZACHARIA</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="page12.html"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>ATTENDANCE FORM</a>  <a class="btn btn-md btn-success display-4" href="page6.html"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>FORM 1</a> <a class="btn btn-md btn-secondary display-4" href="page5.html"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>FORM 2</a> <a class="btn btn-md btn-black display-4" href="page2.html"><span class="mbri-protect mbr-iconfont mbr-iconfont-btn"></span>FORM 3</a> <a class="btn btn-md btn-warning display-4" href="page10.html"><span class="mbri-protect mbr-iconfont mbr-iconfont-btn"></span>FORM 4</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-success display-4" href="page6.html"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>FORM 1</a> <a class="btn btn-md btn-secondary display-4" href="page5.html"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>FORM 2</a> <a class="btn btn-md btn-black display-4" href="page2.html"><span class="mbri-protect mbr-iconfont mbr-iconfont-btn"></span>FORM 3</a> <a class="btn btn-md btn-warning display-4" href="page10.html"><span class="mbri-protect mbr-iconfont mbr-iconfont-btn"></span>FORM 4</a></div>
             </div>
         </div>
     </div>
