create github pages

--- a/page6.html
+++ b/page6.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section once="footers" class="cid-rXLwunR3nn" id="footer7-25">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section once="footers" class="cid-rXLwunR3nn" id="footer7-25">
 
     
 
