--- a/page2.html
+++ b/page2.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-rVSoHGW3xs" id="footer7-1p">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section once="footers" class="cid-rVSoHGW3xs" id="footer7-1p">
 
     
 
