--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section once="footers" class="cid-rVSoHGW3xs" id="footer7-2b">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section once="footers" class="cid-rVSoHGW3xs" id="footer7-2b">
 
     
 
