create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="header1 cid-rXb1RUol93" id="header16-1r">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="header1 cid-rXb1RUol93" id="header16-1r">
 
     
 
@@ -73,7 +73,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-5"><br>WELCOME TO BAVUNI SECONDARY SCHOOL &nbsp;E-LEARNING</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-7">This is the property of BAVUNI SECONDARY School Online program to the students handled by Mr. ZACHARIA</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-success display-4" href="assets/files/FORM-1-protected.pdf"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>FORM 1</a> <a class="btn btn-md btn-secondary display-4" href="assets/files/FORM-2--protected.pdf"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>FORM 2</a> <a class="btn btn-md btn-black display-4" href="assets/files/FORM-3-Copy-protected.pdf"><span class="mbri-protect mbr-iconfont mbr-iconfont-btn"></span>FORM 3</a> <a class="btn btn-md btn-danger display-4" href="assets/files/FORM-4-Copy-protected.pdf"><span class="mbri-protect mbr-iconfont mbr-iconfont-btn"></span>FORM 4</a>  <a class="btn btn-md btn-success-outline display-4" href="page7.html"><span class="mbri-features mbr-iconfont mbr-iconfont-btn"></span>CLICK FOR AVAILABLE INFO</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-success display-4" href="assets/files/FORM-1-protected.pdf"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>FORM 1</a> <a class="btn btn-md btn-secondary display-4" href="assets/files/FORM-2--protected.pdf"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>FORM 2</a> <a class="btn btn-md btn-black display-4" href="assets/files/FORM-3-Copy-protected.pdf"><span class="mbri-protect mbr-iconfont mbr-iconfont-btn"></span>FORM 3</a> <a class="btn btn-md btn-danger display-4" href="assets/files/FORM-4-Copy-protected.pdf"><span class="mbri-protect mbr-iconfont mbr-iconfont-btn"></span>FORM 4</a>  <a class="btn btn-md btn-secondary-outline display-4" href="sms:+254728810063"><span class="mbri-features mbr-iconfont mbr-iconfont-btn"></span>I HOPE YOU ARE ENJOYING OUR SERVICES</a></div>
             </div>
         </div>
     </div>
