--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section once="footers" class="cid-rVSoHGW3xs" id="footer7-2b">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section once="footers" class="cid-rVSoHGW3xs" id="footer7-2b">
 
     
 
@@ -85,7 +85,7 @@
             <div class="col-md-10 align-center">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">ANNOUNCEMENTS</h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Dear Client, Due to Public Demand for the learning content because of the current situation of COVID-19, You are requested to be paying ksh 3,000 per TERM starting JUNE, This is to help us serve you better by paying our administration activities and to make you have updated contents often. Also All questions are for free, but if you need marking scheme of each paper you will have to pay ksh 50 per paper&nbsp;<br>ABOUT THE NEW VERSION<br>You can now get computer questions plus KCSE REVISION QUESTIONS . Remember all files are password protected.&nbsp;<br></p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Dea<br></p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-success display-4" href="https://wa.me/+254788829523"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>CLICK TO ASK FOR PASSWORD IF YOU FORGOT&nbsp;</a> <a class="btn btn-md btn-secondary display-4" href="index.html"><span class="mbri-like mbr-iconfont mbr-iconfont-btn"></span>THANK YOU</a></div>
             </div>
         </div>
