--- a/page8.html
+++ b/page8.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section once="footers" class="cid-rVSoHGW3xs" id="footer7-2h">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section once="footers" class="cid-rVSoHGW3xs" id="footer7-2h">
 
     
 
@@ -75,7 +75,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud2-2u" data-rv-view="219" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud2-2u" data-rv-view="185" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
     <div class="mbr-section__container addons-container addons-row mbr-section__container--isolated">
             <div class=" addons-container-inner">
                 <figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-outside-bottom">
